換個人照片

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="hero-image animate-img">
                     <div class="img-frame">
-                        <img src="files/IMG_9320.jpg" alt="Chen Yi-Ching (Wendy)">
+                        <img src="files/IMG1.png" alt="Chen Yi-Ching (Wendy)">
                     </div>
                 </div>
             </div>
