--- a/index.html
+++ b/index.html
@@ -318,6 +318,9 @@
         <div id="caption"></div>
     </div>
 
+    <!-- Canvas Confetti -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
     <script src="script.js"></script>
 </body>
 
