--- a/index.html
+++ b/index.html
@@ -230,13 +230,21 @@
                     <div class="project-card" data-aos="zoom-in">
                         <div class="project-content">
                             <h3>MeBeforeWe 科學交友助手</h3>
+                            <div class="project-img-placeholder" style="border: none; background: transparent;">
+                                <iframe width="100%" style="aspect-ratio: 16/9; display: block; border: none;"
+                                    src="https://www.youtube.com/embed/XwdTOC546-w" title="MeBeforeWe Demo"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen>
+                                </iframe>
+                            </div>
+                            
                             <p class="project-desc">結合行為科學的交友輔助系統。</p>
                             <ul class="project-tags">
                                 <li>n8n Automation</li>
                                 <li>Telegram Bot</li>
                                 <li>Data Crawler</li>
-                            </ul>
-                            <p>開發 PTT 到 Telegram 的自動爬蟲機器人，實現即時輿情監控與通知。</p>
+                            </ul>                         
+                             <p>開發 PTT 到 Telegram 的自動爬蟲機器人，實現即時輿情監控與通知。</p> 
                         </div>
                     </div>
                     <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
